--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -5,21 +5,167 @@
 # Panel Strings
 share_link_header_text=Partagez ce lien pour inviter quelqu'un à discuter :
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Qui voulez-vous inviter ?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=L'invitation expirera dans {{expiry_time}} jour;L'invitation expirera dans {{expiry_time}} jours
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=L'invitation expirera dans {{expiry_time}} heure;L'invitation expirera dans {{expiry_time}} heures
+
 # Status text
+display_name_guest=Invité
 display_name_dnd_status=Ne pas déranger
 display_name_available_status=Disponible
 
 unable_retrieve_url=Désolé, nous n'avons pas pu récupérer d'url d'appel.
+## LOCALIZATION NOTE(session_expired_error_description): This may be displayed
+## in a rare error instance at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+session_expired_error_description=Session expirée. Toutes les URL précédemment créées et partagées ne fonctionneront plus.
+
+## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
+## the appropriate action.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Réessayer
+
+share_email_subject3=Vous avez été invité à rejoindre une conversation
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=Pour accepter cette invitation, copiez simplement ce lien ou cliquez dessus pour démarrer votre conversation :\r\n\r\n{{callUrl}}
+share_button=Courriel
+copy_url_button=Copier
+copied_url_button=Copié !
+
+panel_footer_signin_or_signup_link=S'inscrire ou se connecter
+
+settings_menu_item_account=Compte
+settings_menu_item_settings=Paramètres
+settings_menu_item_signout=Se déconnecter
+settings_menu_item_signin=Se connecter
+settings_menu_button_tooltip=Paramètres
+
+# Contact Strings (Panel)
+
+## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
+## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+contacts_search_placesholder=Rechercher…
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+new_contact_button=Nouveau contact
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Nom
+new_contact_email_placeholder=Adresse électronique
+## LOCALIZATION NOTE (add_contact_button):
+## This is the button to actually add the new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+add_contact_button=Ajouter le contact
+### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
+### the user enters an invalid email address, preventing the addition of the
+### contact.
+valid_email_text_description=Veuillez saisir une adresse électronique valide
+
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Ajouter ou importer des contacts
+## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where these appear on the UI
+import_contacts_button=Importer
+importing_contacts_progress_button=Importation…
+## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
+## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Synchroniser les contacts
+## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
+## contacts fails. This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Désolé, l'importation des contacts a échoué
+## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
+## fails and the user may need more help. In this item, don't translate the part between
+## {{..}} because this will be replaced by the label from import_failed_support_link_label.
+## This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Désolé, l'importation des contacts a échoué, veuillez consulter notre {{import_failed_support_link_label}} pour d'avantage d'aide
+import_failed_support_link_label=site d'assistance
+
+## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Supprimer le contact
+## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
+## to confirm deletion of a contact.
+confirm_delete_contact_alert=Voulez-vous vraiment supprimer ce contact ?
+## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
+## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Supprimer le contact
+confirm_delete_contact_cancel_button=Annuler
+
+## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to block a contact from calling
+## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Bloquer le contact
+## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to unblock a contact and allow them
+## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Débloquer le contact
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Modifier le contact…
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Modifier le contact
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Nom
+edit_contact_email_label=Adresse électronique
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Terminé
+
+## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Conversation audio
+
+## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Conversation vidéo
 
 # Conversation Window Strings
-
+begin_call_prompt=Prêt à lancer votre conversation ?
 incoming_call_title=Appel entrant…
 incoming_call=Appel entrant
-incoming_call_answer_button=Décrocher
-incoming_call_answer_audio_only_tooltip=Décrocher en mode audio
-incoming_call_decline_and_block_button=Ignorer et bloquer
-incoming_call_decline_button=Ignorer
-incoming_call_block_button=Bloquer
+incoming_call_accept_button=Accepter
+incoming_call_accept_audio_only_tooltip=Accepter en mode audio
+incoming_call_cancel_button=Annuler
+incoming_call_cancel_and_block_button=Annuler et bloquer
 hangup_button_title=Raccrocher
 hangup_button_caption=Terminer l'appel
 mute_local_audio_button_title=Couper la diffusion audio
@@ -28,12 +174,19 @@ mute_local_video_button_title=Couper la diffusion vidéo
 unmute_local_video_button_title=Reprendre la diffusion vidéo
 
 peer_ended_conversation2=Votre correspondant a mis fin à la conversation.
-call_has_ended=Votre appel est terminé.
+conversation_has_ended=Votre conversation est terminée.
+restart_call=Rappeler
 
 cannot_start_call_session_not_ready=Impossible de passer l'appel, la session n'est pas prête.
 network_disconnected=La connexion réseau a été brusquement interrompue.
 
 connection_error_see_console_notification=Échec de l'appel ; consultez la console pour plus de détails.
+generic_failure_with_reason=Quelque chose s'est mal passé. Vous pouvez réessayer ou envoyer un message électronique contenant un lien permettant d'être contacté plus tard.
+generic_failure_no_reason=Quelque chose s'est mal passé. Voulez-vous réessayer ?
+retry=Réessayer
+report_user=Signaler l'utilisateur
+
+
 ## LOCALIZATION NOTE (legal_text_and_links2): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy.
@@ -42,7 +195,7 @@ legal_text_and_links2=En utilisant ce produit vous acceptez les {{terms_of_use}}
 legal_text_tos = conditions d'utilisation
 legal_text_privacy = politique de confidentialité
 
-feedback_call_experience_heading=Comment s'est passé votre appel ?
+feedback_call_experience_heading2=Comment s'est passée votre conversation ?
 feedback_what_makes_you_sad=Qu'est-ce qui vous a gêné ?
 feedback_thank_you_heading=Merci d'avoir donné votre avis !
 feedback_category_audio_quality=Qualité audio
@@ -53,15 +206,8 @@ feedback_category_other=Autre :
 feedback_custom_category_text_placeholder=Quels ont été les problèmes ?
 feedback_submit_button=Envoyer
 feedback_back_button=Retour
-## LOCALIZATION NOTE (feedback_window_will_close_in): In this item, don't
-## translate the part between {{..}}
-feedback_window_will_close_in=Cette fenêtre se fermera dans {{countdown}} secondes
-
-share_email_subject2=Invitation à discuter
-## LOCALIZATION NOTE (share_email_body2): In this item, don't translate the
-## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body2=Merci de cliquer sur ce lien pour m'appeler :\r\n\r\n{{callUrl}}
-share_button=Courriel
-
-copy_url_button=Copier
-copied_url_button=Copié !
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Cette fenêtre se fermera dans {{countdown}} seconde;Cette fenêtre se fermera dans {{countdown}} secondes
