--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -414,7 +414,7 @@ syncPromoNotification.addons.description=Ви можете мати доступ
 syncPromoNotification.addons-sync-disabled.description=Ви можете використовувати ваш акаунт %S щоб синхронізувати додатки на багатьох пристроях.\u0020
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
-dataReportingNotification.message       = %1$S automatically sends some data to %2$S so that we can improve your experience.
+dataReportingNotification.message       = %1$S автоматично відправляє деякі дані у %2$S, щоб ми могли покращити ваш досвід.
 dataReportingNotification.button.label  = Вибрати чим ділитись
 dataReportingNotification.button.accessKey  = В
 
