--- a/de/mobile/android/chrome/browser.properties
+++ b/de/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Installieren
 
 # Alerts
 alertAddonsDownloading=Add-on wird heruntergeladen
-alertAddonsInstalledNoRestart=Installation vollständig
 alertAddonsFail=Installation fehlgeschlagen
+alertAddonsInstalledNoRestart.message=Installation abgeschlossen
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=ADD-ONS
 
 alertDownloadsStart2=Download gestartet
 alertDownloadsDone2=Download abgeschlossen
@@ -19,6 +23,9 @@ alertDownloadsToast=Mit Download begonnen…
 alertDownloadsPause=Anhalten
 alertDownloadsResume=Fortsetzen
 alertDownloadsCancel=Abbrechen
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Downloads sind in Gastsitzungen deaktiviert.
 
 alertFullScreenToast=ZURÜCK drücken, um Vollbild-Modus zu beenden
 
@@ -116,6 +123,35 @@ contacts.ask=%S den Zugriff auf Ihre Kontakte erlauben?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Für diese Website nicht mehr fragen
 
+# Device Storage API
+deviceStorageMusic.allow=Erlauben
+deviceStorageMusic.dontAllow=Ablehnen
+deviceStorageMusic.ask=%S den Zugriff auf Ihre Musik erlauben?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Für diese Website nicht mehr fragen
+
+deviceStoragePictures.allow=Erlauben
+deviceStoragePictures.dontAllow=Ablehnen
+deviceStoragePictures.ask=%S den Zugriff auf Ihre Bilder erlauben?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Für diese Website nicht mehr fragen
+
+deviceStorageSdcard.allow=Erlauben
+deviceStorageSdcard.dontAllow=Ablehnen
+deviceStorageSdcard.ask=%S den Zugriff auf Ihren externen Speicher erlauben?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Für diese Website nicht mehr fragen
+
+deviceStorageVideos.allow=Erlauben
+deviceStorageVideos.dontAllow=Ablehnen
+deviceStorageVideos.ask=%S den Zugriff auf Ihre Videos erlauben?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Für diese Website nicht mehr fragen
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Text in Zwischenablage kopiert
 
 # Casting
-casting.prompt=An Gerät weiterleiten
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=An Gerät senden
+casting.mirrorTab=Tab spiegeln
+casting.mirrorTabStop=Spiegeln beenden
 
 # Context menu
 contextmenu.openInNewTab=Link in neuem Tab öffnen
@@ -209,7 +249,9 @@ contextmenu.unmute=Ton einschalten
 contextmenu.saveVideo=Video speichern
 contextmenu.saveAudio=Audio speichern
 contextmenu.addToContacts=Zu Kontakten hinzufügen
-contextmenu.castToScreen=An Bildschirm weiterleiten
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=An Gerät senden
 
 contextmenu.copy=Kopieren
 contextmenu.cut=Ausschneiden
@@ -341,3 +383,9 @@ browser.menu.context.mailto = E-Mail-Adresse
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Feed auswählen
 feedHandler.subscribeWith=Abonnieren mit
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S sollte nicht mehr verwendet werden. Bitte verwenden Sie stattdessen %S.
