--- a/de/mobile/android/chrome/webapp.properties
+++ b/de/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 Update fehlgeschlagen;#1 Updates fehlgeschlagen
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Fehler beim Download des Updates für %1$S;Fehler beim Download der Updates für %1$S
+
+webappsDisabledInGuest=Das Installieren von Apps ist in Gastsitzungen deaktiviert.
