--- a/sk/dom/chrome/dom/dom.properties
+++ b/sk/dom/chrome/dom/dom.properties
@@ -208,3 +208,4 @@ KeyNameZoomWarning=Hodnota "Zoom" pre KeyboardEvent.key je zavrhnutá a bude pre
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=Hodnoty pre KeyboardEvent.key začínajúce reťazcom "Dead" sú zavrhnuté a budú spojené len ako "Dead". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importovanie uzlov XUL do obsahu dokumentu je zavrhnuté. Táto funkcionalita bude čoskoro odstránená.
+XMLDocumentLoadPrincipalMismatch=Používanie document.load je zakázané na dokumentoch, ktoré pochádzajú z iných okien. Pre dokument je možné zavolať .load len z okna, v ktorom bol daný dokument vytvorený. Použite radšej XMLHttpRequest.
