--- a/sk/mobile/android/chrome/browser.properties
+++ b/sk/mobile/android/chrome/browser.properties
@@ -210,7 +210,9 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Text skopírovaný do schránky
 
 # Casting
-casting.prompt=Prehrať na zariadení
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Odoslať do zariadenia
 casting.mirrorTab=Zrkadliť kartu
 casting.mirrorTabStop=Zastaviť zrkadlenie karty
 
@@ -246,7 +248,9 @@ contextmenu.unmute=Zrušiť stlmenie
 contextmenu.saveVideo=Uložiť video
 contextmenu.saveAudio=Uložiť zvuk
 contextmenu.addToContacts=Pridať medzi kontakty
-contextmenu.castToScreen=Prehrať na obrazovke
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Odoslať do zariadenia
 
 contextmenu.copy=Kopírovať
 contextmenu.cut=Vystrihnúť
