--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -35,8 +35,12 @@ restart_call=Znova zavolať
 
 cannot_start_call_session_not_ready=Nie je možné začať hovor, relácia nie je pripravená.
 network_disconnected=Pripojenie k sieti bolo náhle prerušené.
-
 connection_error_see_console_notification=Hovor zlyhal. Podrobnejšie informácie nájdete v konzole.
+generic_failure_with_reason=Niečo sa pokazilo. Môžete to skúsiť znova, prípadne môžete e-mailom odoslať odkaz, pomocou ktorého budete zastihnuteľný neskôr.
+generic_failure_no_reason=Niečo sa pokazilo. Chcete to skúsiť znova?
+retry=Znova
+report_user=Nahlásiť používateľa
+
 ## LOCALIZATION NOTE (legal_text_and_links2): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy.
